@@ -27,70 +27,91 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-public class DistributionNonDiscreteRing<T> implements Ring<T> {
+public class DistributionNonDiscreteRing<T> implements Ring<T>
+{
   private static final Logger LOG = LoggerFactory.getLogger(DistributionNonDiscreteRing.class);
-  private TreeMap<Integer, T> _cumulativePointsMap;
-  private int _totalPoints;
-  private int _totalHosts;
+  private final TreeMap<Integer, T> _cumulativePointsMap;
+  private final int _totalPoints;
+  private final int _totalHosts;
 
-  public DistributionNonDiscreteRing(Map<T, Integer> pointsMap) {
+  public DistributionNonDiscreteRing(Map<T, Integer> pointsMap)
+  {
     _cumulativePointsMap = calculateCDF(pointsMap);
-    _totalPoints = _cumulativePointsMap.lastKey();
+    _totalPoints = _cumulativePointsMap.isEmpty() ? 0 : _cumulativePointsMap.lastKey();
     _totalHosts = pointsMap.size();
   }
 
   @Override
-  public T get(int _unused) {
-    if (_unused != 0) {
+  public T get(int unused)
+  {
+    if (unused != 0)
+    {
       LOG.warn("Distribution based ring does not support sticky routing, but non-null key is passed in");
+    }
+    if (_cumulativePointsMap.isEmpty())
+    {
+      LOG.warn("Calling get on an empty ring, null value will be returned");
+      return null;
     }
     int rand = ThreadLocalRandom.current().nextInt(_totalPoints);
     return _cumulativePointsMap.higherEntry(rand).getValue();
   }
 
   @Override
-  public Iterator<T> getIterator(int _unused) {
-    if (_unused != 0) {
+  public Iterator<T> getIterator(int unused)
+  {
+    if (unused != 0)
+    {
       LOG.warn("Distribution based ring does not support sticky routing, but non-zero key is passed in");
     }
 
-    return new Iterator<T>() {
-      private Set<T> _visitedHosts = ConcurrentHashMap.newKeySet();
-
-      @Override
-      public boolean hasNext() {
-        return _visitedHosts.size() < _totalHosts;
-      }
-
-      @Override
-      public T next() {
-        T pickedHost = get(0);//argument is not used, keep redrawing from the distribution
-        while (_visitedHosts.contains(pickedHost)) {
-          //Potential problem: since we are using randomized selection here, we might encounter prolonged drawing
-          pickedHost = get(0);
-        }
-        _visitedHosts.add(pickedHost);
-        return pickedHost;
-      }
-    };
+    return new DistributionBasedIterator();
   }
 
   @Override
-  public boolean isStickyRoutingCapable() {
+  public boolean isStickyRoutingCapable()
+  {
     return false;
   }
 
-  private TreeMap<Integer, T> calculateCDF(Map<T, Integer> pointsMap) {
+  private TreeMap<Integer, T> calculateCDF(Map<T, Integer> pointsMap)
+  {
     int cumulativeSum = 0;
     TreeMap<Integer, T> cumulativePointsMap = new TreeMap<Integer, T>();
 
-    for (Map.Entry<T, Integer> entry : pointsMap.entrySet()) {
-      if (entry.getValue() == 0) {
+    for (Map.Entry<T, Integer> entry : pointsMap.entrySet())
+    {
+      if (entry.getValue() == 0)
+      {
         continue;
       }
       cumulativeSum += entry.getValue();
       cumulativePointsMap.put(cumulativeSum, entry.getKey());
     }
     return cumulativePointsMap;
+  }
+
+  class DistributionBasedIterator implements Iterator<T>
+  {
+    private Set<T> _visitedHosts = ConcurrentHashMap.newKeySet();
+
+    @Override
+    public boolean hasNext()
+    {
+      return _visitedHosts.size() < _totalHosts;
+    }
+
+    @Override
+    public T next()
+    {
+      T pickedHost = get(0);//argument is not used, keep redrawing from the distribution
+      while (_visitedHosts.contains(pickedHost))
+      {
+        //Potential problem: since we are using randomized selection here, we might encounter prolonged drawing
+        pickedHost = get(0);
+      }
+      _visitedHosts.add(pickedHost);
+      return pickedHost;
+    }
   }
 }
